HyprChroma and theme script fixes

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -4,10 +4,10 @@ monitor=,preferred,auto,auto
 exec-once = hyprctl setcursor Bibata-Modern-Ice 32
 exec-once = seaglass-theme &
 exec-once = systemctl --user start hyprland.target &
+exec-once = hyprpm enable Hypr-Chroma
 
 darkwindow_invert = fullscreen:0
 chroma_background = $backgroundRgb
-plugin = alexhulbert/HyprChroma
 
 layerrule = blur,waybar
 layerrule = blur,swaync-control-center
