Fix notifications, gui services, and plasma-waybar rules

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -1,4 +1,5 @@
 source = ~/.cache/wal/colors-hyprland.conf
+source = ~/.config/hypr/plasmoids.conf
 monitor=,preferred,auto,auto
 
 exec-once = hyprctl setcursor Bibata-Modern-Ice 32
@@ -10,15 +11,18 @@ darkwindow_invert = fullscreen:0
 chroma_background = $backgroundRgb
 
 layerrule = blur,waybar
-layerrule = blur,swaync-control-center
 layerrule = blur,display-switcher
 layerrule = blur,power-menu
+layerrule = blur,swaync-control-center
+layerrule = blur,swaync-notification-window
 
 # layer shadows
 monitor=,addreserved,-6,0,0,0
 layerrule = ignorealpha 0.84,waybar
 layerrule = ignorealpha 0.84,display-switcher
 layerrule = ignorealpha 0.84,power-menu
+layerrule = ignorealpha 0.84,swaync-control-center
+layerrule = ignorealpha 0.84,swaync-notification-window
 
 windowrulev2 = opacity 0.99, class:.*
 
@@ -28,10 +32,6 @@ windowrulev2 = noborder, class:org.kde.plasmawindowed
 
 # Launcher
 windowrulev2 = noborder, class:ulauncher
-
-# Notifications
-windowrulev2 = move 100%-412 48, title:^(plasmawindowed)$
-windowrulev2 = noinitialfocus, title:^(plasmawindowed)$
 
 # Floating Dialogs
 windowrulev2 = float, class:pavucontrol-qt
