--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -107,7 +107,8 @@ master {
 }
 
 gestures {
-    workspace_swipe = off
+    workspace_swipe = true
+    workspace_swipe_cancel_ratio = 0.15
 }
 
 misc {
@@ -132,11 +133,12 @@ bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# HyCov Keybinds
+bind = $mainMod, tab, hycov:toggleoverview, forceallinone
+bind = $mainMod, left, hycov:movefocus, l
+bind = $mainMod, right, hycov:movefocus, r
+bind = $mainMod, up, hycov:movefocus, u
+bind = $mainMod, down, hycov:movefocus, d
 
 # Move window with mainMod + shift + arrow keys
 bind = $mainMod SHIFT, left, movewindow, l
