Misc mouse and blue changes

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -59,6 +59,8 @@ input {
     follow_mouse = 1
     touchpad {
         natural_scroll = no
+        disable_while_typing = no
+        tap-to-click = no
     }
     sensitivity = 0
 }
@@ -70,6 +72,8 @@ general {
     col.active_border = $color1Alpha $color2Alpha 45deg
     col.inactive_border = $backgroundAlpha
     layout = dwindle
+    cursor_inactive_timeout = 20
+    resize_on_border = true
 }
 
 decoration {
@@ -78,7 +82,9 @@ decoration {
         enabled = true
         size = 3
         passes = 5
-
+        noise = 0.07
+        xray = true
+	    popups = true
     }
     drop_shadow = yes
     shadow_range = 8
