More hyprland startup fixes

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -2,10 +2,9 @@ source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/plasmoids.conf
 monitor=,preferred,auto,auto
 
+exec-once = hyprpm reload; hyprctl seterror enable
 exec-once = hyprctl setcursor Bibata-Modern-Ice 32
-exec-once = seaglass-theme &
 exec-once = systemctl --user start hyprland.target &
-exec-once = hyprpm enable Hypr-Chroma
 
 darkwindow_invert = fullscreen:0
 chroma_background = $backgroundRgb
@@ -121,6 +120,11 @@ misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
     disable_splash_rendering = true
+}
+
+# this is turned back off after plugins load
+debug {
+    suppress_errors = true
 }
 
 windowrulev2 = nomaximizerequest, class:.*
