--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -1,13 +1,17 @@
 source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/plasmoids.conf
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,auto,vrr,1
+monitor=DP-6,5120x1440@119.97Hz,auto,auto,vrr,1
+
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,32
 
 exec-once = hyprpm reload; hyprctl seterror enable
-exec-once = hyprctl setcursor Bibata-Modern-Ice 32
 exec-once = systemctl --user start hyprland.target &
+exec-once = lidhandler
 
-darkwindow_invert = fullscreen:0
-chroma_background = $backgroundRgb
+chromakey_enable = fullscreen:0
+chromakey_background = $backgroundRgb
 
 layerrule = blur,waybar
 layerrule = blur,display-switcher
@@ -23,22 +27,30 @@ layerrule = ignorealpha 0.84,power-menu
 layerrule = ignorealpha 0.84,swaync-control-center
 layerrule = ignorealpha 0.84,swaync-notification-window
 
-windowrulev2 = opacity 0.99, class:.*
+windowrulev2 = opacity 0.999, class:.*
+windowrulev2 = forcergbx, title:Picture-in-Picture
 
 # Plasmoids
+windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmawindowed
+windowrulev2 = float, class:org.kde.plasmashell
 windowrulev2 = noborder, class:org.kde.plasmawindowed
 
 # Launcher
 windowrulev2 = noborder, class:ulauncher
 
 # Floating Dialogs
+windowrulev2 = float, class:^$,title:^$
+windowrulev2 = float, class:org.kde.bluedevilwizard
+windowrulev2 = float, class:1Password
 windowrulev2 = float, class:pavucontrol-qt
 windowrulev2 = float, class:org.kde.polkit-kde-authentication-agent-1
 windowrulev2 = float, title:^(Open File)$
 windowrulev2 = float, title:^(Open Folder)$
 windowrulev2 = float, title:^(Save As)$
 windowrulev2 = float, title:^(Save File)$
+windowrulev2 = float, title:^(Copying — Dolphin)$
+windowrulev2 = float, title:^(Picture-in-Picture)$
 
 # Set programs that you use
 $terminal = konsole
@@ -111,6 +123,10 @@ master {
     new_is_master = true
 }
 
+plugin:touch_gestures {
+    sensitivity = 4.0
+}
+
 gestures {
     workspace_swipe = true
     workspace_swipe_cancel_ratio = 0.15
@@ -120,6 +136,20 @@ misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    no_direct_scanout = false
+    vrr = 2
+}
+
+plugin {
+    hycov {
+        enable_alt_release_exit = 1
+	alt_toggle_auto_next = 0
+	enable_hotarea = 0
+    }
+
+    hyprexpo {
+        workspace_method = first 1
+    }
 }
 
 # this is turned back off after plugins load
@@ -142,13 +172,21 @@ bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, toggleopaque, invertactivewindow
 
-# HyCov Keybinds
-bind = $mainMod, tab, hycov:toggleoverview, forceallinone
-bind = $mainMod, left, hycov:movefocus, l
-bind = $mainMod, right, hycov:movefocus, r
-bind = $mainMod, up, hycov:movefocus, u
-bind = $mainMod, down, hycov:movefocus, d
+# hyprexpo/HyCov Keybinds
+bind = $mainMod, tab, hyprexpo:expo, toggle
+bind = ALT, tab, hycov:toggleoverview
+bind = ALT, left, hycov:movefocus, l
+bind = ALT, right, hycov:movefocus, r
+bind = ALT, up, hycov:movefocus, u
+bind = ALT, down, hycov:movefocus, d
+
+# Move focus
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # Move window with mainMod + shift + arrow keys
 bind = $mainMod SHIFT, left, movewindow, l
@@ -186,7 +224,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e-2
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -198,14 +236,21 @@ bindl = ,switch:Lid Switch, exec, lidhandler
 # Function Keys
 bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
 bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower --max-volume 120
-bind = SHIFT, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise --max-volume 120
+bind = ALT, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise --max-volume 120
 bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 bind = $mainMod, P, exec, ags -r "switchDisplay()"
 bind = $mainMod SHIFT, P, exec, wdisplays
+bind = SHIFT, XF86AudioRaiseVolume, exec, playerctl --player=spotify,%any,kdeconnect next
+bind = SHIFT, XF86AudioLowerVolume, exec, playerctl --player=spotify,%any,kdeconnect previous
+bind = , XF86AudioPlay, exec, playerctl --player=spotify,%any,kdeconnect play-pause
+bind = , XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect next
+bind = , XF86AudioPrev, exec, playerctl --player=spotify,%any,kdeconnect previous
+bind = SHIFT, XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect shuffle Toggle
 
+# Copilot Key
 
 # Bind remapped caps lock to previous workspace
 bind = , XF86Calculator, workspace, previous
