Map ctrl+[ to escape

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -250,7 +250,8 @@ bind = , XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect next
 bind = , XF86AudioPrev, exec, playerctl --player=spotify,%any,kdeconnect previous
 bind = SHIFT, XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect shuffle Toggle
 
-# Copilot Key
+# Bind Ctrl+[ to escape
+bind = CTRL, [, exec, wtype -p Escape
 
 # Bind remapped caps lock to previous workspace
 bind = , XF86Calculator, workspace, previous
