Another huge update

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -38,6 +38,7 @@ windowrulev2 = noborder, class:org.kde.plasmawindowed
 
 # Launcher
 windowrulev2 = noborder, class:ulauncher
+windowrulev2 = stayfocused, class:ulauncher
 
 # Floating Dialogs
 windowrulev2 = float, class:^$,title:^$
@@ -52,8 +53,15 @@ windowrulev2 = float, title:^(Save File)$
 windowrulev2 = float, title:^(Copying — Dolphin)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 
+# Sidebars
+windowrulev2 = float, class:^(chrome-.*__-Default)$
+windowrulev2 = sticky, class:^(chrome-.*__-Default)$
+windowrulev2 = noborder, class:^(chrome-.*__-Default)$
+windowrulev2 = pin, class:^(chrome-.*__-Default)$
+windowrulev2 = rounding 0, class:^(chrome-.*__-Default)$
+
 # Set programs that you use
-$terminal = konsole
+$terminal = wezterm
 $fileManager = dolphin
 $menu = ulauncher-toggle
 
@@ -136,8 +144,6 @@ misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
     disable_splash_rendering = true
-    no_direct_scanout = false
-    vrr = 2
 }
 
 plugin {
@@ -172,7 +178,13 @@ bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, O, toggleopaque, invertactivewindow
+bind = $mainMod, O, togglechromakey
+
+# sidebars
+bind = $mainMod SHIFT, W, exec, pypr toggle slack
+bind = $mainMod SHIFT, A, exec, pypr toggle todoist
+bind = $mainMod SHIFT, S, exec, pypr toggle terminal
+bind = $mainMod SHIFT, D, exec, pypr toggle messages
 
 # hyprexpo/HyCov Keybinds
 bind = $mainMod, tab, hyprexpo:expo, toggle
