Tweaks for latest packages

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = hyprpm reload; hyprctl seterror enable
 exec-once = systemctl --user start hyprland.target &
 exec-once = lidhandler
 
-chromakey_enable = fullscreen:0
+windowrulev2 = plugin:chromakey, fullscreen:0
 chromakey_background = $backgroundRgb
 
 layerrule = blur,waybar
@@ -55,9 +55,9 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 
 # Sidebars
 windowrulev2 = float, class:^(chrome-.*__-Default)$
-windowrulev2 = sticky, class:^(chrome-.*__-Default)$
 windowrulev2 = noborder, class:^(chrome-.*__-Default)$
-windowrulev2 = pin, class:^(chrome-.*__-Default)$
+# windowrulev2 = pin, class:^(chrome-.*__-Default)$
+windowrulev2 = stayfocused, class:^(chrome-.*__-Default)$
 windowrulev2 = rounding 0, class:^(chrome-.*__-Default)$
 
 # Set programs that you use
