Works with latest pkgs (as of last week)

--- a/user/resources/hyprland.conf
+++ b/user/resources/hyprland.conf
@@ -57,7 +57,7 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(chrome-.*__-Default)$
 windowrulev2 = noborder, class:^(chrome-.*__-Default)$
 # windowrulev2 = pin, class:^(chrome-.*__-Default)$
-windowrulev2 = stayfocused, class:^(chrome-.*__-Default)$
+# windowrulev2 = stayfocused, class:^(chrome-.*__-Default)$
 windowrulev2 = rounding 0, class:^(chrome-.*__-Default)$
 
 # Set programs that you use
@@ -262,6 +262,11 @@ bind = , XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect next
 bind = , XF86AudioPrev, exec, playerctl --player=spotify,%any,kdeconnect previous
 bind = SHIFT, XF86AudioNext, exec, playerctl --player=spotify,%any,kdeconnect shuffle Toggle
 
+bind = $mainMod, escape, submap, empty
+submap = empty
+bind = $mainMod, escape, submap, reset
+submap = reset
+
 # Bind Ctrl+[ to escape
 bind = CTRL, [, exec, wtype -p Escape
 
@@ -276,3 +281,5 @@ binds {
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
