--- a/system/files/grub.cfg
+++ b/system/files/grub.cfg
@@ -4,7 +4,7 @@ GRUB_DEFAULT=saved
 GRUB_TIMEOUT=0
 GRUB_HIDDEN_TIMEOUT=0.1
 GRUB_DISTRIBUTOR="Arch"
-GRUB_CMDLINE_LINUX_DEFAULT="loglevel=3 quiet splash intel_iommu=on"
+GRUB_CMDLINE_LINUX_DEFAULT="loglevel=3 initcall_blacklist=simpledrm_platform_driver_init i915.enable_psr=0 i915.enable_dc=0 quiet splash"
 GRUB_CMDLINE_LINUX=""
 GRUB_PRELOAD_MODULES="part_gpt part_msdos"
 GRUB_TIMEOUT_STYLE=hidden
