--- a/system/files/spotify.desktop
+++ b/system/files/spotify.desktop
@@ -4,7 +4,7 @@ Name=Spotify
 GenericName=Music Player
 Icon=spotify-client
 TryExec=spotify
-Exec=spotify --ozone-platform=wayland --enable-features=UseOzonePlatform --uri=%U
+Exec=bash -c "cd /tmp && spotify --ozone-platform=wayland --enable-features=UseOzonePlatform --uri=%U"
 Terminal=false
 MimeType=x-scheme-handler/spotify;
 Categories=Audio;Music;Player;AudioVideo;
