--- a/system/files/mkinitcpio.conf
+++ b/system/files/mkinitcpio.conf
@@ -2,4 +2,4 @@
 MODULES=()
 BINARIES=()
 FILES=()
-HOOKS=(base udev plymouth autodetect modconf kms keyboard keymap consolefont block filesystems fsck)
+HOOKS=(base systemd plymouth autodetect microcode modconf kms keyboard keymap sd-vconsole sd-encrypt block filesystems resume)
