--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -13,6 +13,9 @@ exec-once = lidhandler
 windowrulev2 = plugin:chromakey, fullscreen:0
 chromakey_background = $backgroundRgb
 
+# prevent wallpaper animation glitch
+animation = layers, 0
+
 layerrule = blur,waybar
 layerrule = blur,display-switcher
 layerrule = blur,power-menu
@@ -30,6 +33,11 @@ layerrule = ignorealpha 0.84,swaync-notification-window
 windowrulev2 = opacity 0.999, class:.*
 windowrulev2 = forcergbx, title:Picture-in-Picture
 
+# Primenote
+windowrulev2 = float, class:^(primenote)$
+windowrulev2 = size 600 420, class:^(primenote)$
+windowrulev2 = pin, class:^(primenote)$
+
 # Plasmoids
 windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmawindowed
@@ -37,7 +45,7 @@ windowrulev2 = float, class:org.kde.plasmashell
 windowrulev2 = noborder, class:org.kde.plasmawindowed
 
 # Launcher
-windowrulev2 = noborder, class:ulauncher
+# windowrulev2 = noborder, class:ulauncher
 windowrulev2 = stayfocused, class:ulauncher
 
 # Floating Dialogs
@@ -103,12 +111,14 @@ decoration {
         passes = 5
         noise = 0.07
         xray = true
-	    popups = true
     }
     drop_shadow = yes
-    shadow_range = 8
-    shadow_render_power = 3
-    col.shadow = rgba(000000D6)
+    shadow {
+        enabled = true
+        range = 8
+        render_power = 3
+        color = rgba(000000D6)
+    }
 }
 
 animations {
@@ -171,6 +181,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod SHIFT, Q, exec, zsh -c "kill -9 $(hyprctl activewindow -j | jq .pid)"
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -179,6 +190,8 @@ bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, O, togglechromakey
+bind = $mainMod, N, exec, pnote -c new
+bind = $mainMod SHIFT, N, exec, bash -c 'f="$(hyprctl activewindow -j | jq -r .title)"; rm "$HOME/.config/primenote/notes/$f.txt"'
 
 # sidebars
 bind = $mainMod SHIFT, W, exec, pypr toggle slack
@@ -242,7 +255,7 @@ bind = $mainMod, mouse_up, workspace, e-2
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = , XF86PowerOff, exec, ags -t power-menu
+bind = , XF86PowerOff, exec, agsv1 -t power-menu
 bindl = ,switch:Lid Switch, exec, lidhandler
 
 # Function Keys
@@ -253,7 +266,7 @@ bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
-bind = $mainMod, P, exec, ags -r "switchDisplay()"
+bind = $mainMod, P, exec, agsv1 -r "switchDisplay()"
 bind = $mainMod SHIFT, P, exec, wdisplays
 bind = SHIFT, XF86AudioRaiseVolume, exec, playerctl --player=spotify,%any,kdeconnect next
 bind = SHIFT, XF86AudioLowerVolume, exec, playerctl --player=spotify,%any,kdeconnect previous
