--- a/user/files/pyprland.toml
+++ b/user/files/pyprland.toml
@@ -7,7 +7,7 @@ class = "chrome-todoist.com__-Default"
 animation = "fromLeft"
 process_tracking = false
 size = "480px 1160px"
-position = "0px 40px"
+position = "0px 38px"
 offset = "200%"
 multi = false
 smart_focus = false
@@ -19,20 +19,20 @@ class = "chrome-chat.beeper.com__-Default"
 animation = "fromRight"
 process_tracking = false
 size = "850px 1160px"
-position = "1070px 40px"
+position = "1070px 38px"
 offset = "200%"
 multi = false
 smart_focus = false
 excludes = ["slack", "terminal"]
 
 [scratchpads.slack]
-command = "google-chrome-stable --profile-directory=Default --app=https://slack.com"
+command = "google-chrome-stable --profile-directory=Default --app=https://app.slack.com/client/T02CVA1G1H6"
 class = "chrome-slack.com__-Default"
 animation = "fromTop"
 process_tracking = false
 margin = 40
 size = "100% 60%"
-position = "0px 40px"
+position = "0px 38px"
 offset = "200%"
 multi = false
 smart_focus = false
