Fix for latest pkgs

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -74,7 +74,7 @@ $fileManager = dolphin
 $menu = ulauncher-toggle
 
 xwayland {
-  force_zero_scaling = true
+  force_zero_scaling = false
 }
 
 input {
