Fix for latest version of hyprlock

--- a/user/files/hyprlock.conf
+++ b/user/files/hyprlock.conf
@@ -2,7 +2,7 @@ source = ~/.cache/wal/colors-hyprland.conf
 
 background {
     monitor =
-    path = ~/.cache/wallpaper
+    path = $wallpaper
     blur_passes = 2
     contrast = 1
     brightness = 0.5
