--- a/user/files/theme/colors-hyprland.conf
+++ b/user/files/theme/colors-hyprland.conf
@@ -2,7 +2,7 @@ $foreground = rgb({foreground.strip})
 $background = rgb({background.strip})
 $backgroundRgb = {background.rgb}
 $backgroundAlpha = rgba({background.strip}db)
-$wallpaper = rgb({wallpaper.strip})
+$wallpaper = {wallpaper}
 
 $color0 = rgb({color0.strip})
 $color1 = rgb({color1.strip})
