--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -62,11 +62,11 @@ windowrulev2 = float, title:^(Copying — Dolphin)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 
 # Sidebars
-windowrulev2 = float, class:^(chrome-.*__-Default)$
-windowrulev2 = noborder, class:^(chrome-.*__-Default)$
-# windowrulev2 = pin, class:^(chrome-.*__-Default)$
-# windowrulev2 = stayfocused, class:^(chrome-.*__-Default)$
-windowrulev2 = rounding 0, class:^(chrome-.*__-Default)$
+windowrulev2 = float, class:^(chrome-.*-Default)$
+windowrulev2 = noborder, class:^(chrome-.*-Default)$
+# windowrulev2 = pin, class:^(chrome-.*-Default)$
+# windowrulev2 = stayfocused, class:^(chrome-.*-Default)$
+windowrulev2 = rounding 0, class:^(chrome-.*-Default)$
 
 # Set programs that you use
 $terminal = wezterm
