--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -42,7 +42,7 @@ windowrulev2 = pin, class:^(primenote)$
 windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmashell
-windowrulev2 = noborder, class:org.kde.plasmawindowed
+# windowrulev2 = noborder, class:org.kde.plasmawindowed
 
 # Launcher
 # windowrulev2 = noborder, class:ulauncher
