Make sidebars work on all monitors

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -194,10 +194,10 @@ bind = $mainMod, N, exec, pnote -c new
 bind = $mainMod SHIFT, N, exec, bash -c 'f="$(hyprctl activewindow -j | jq -r .title)"; rm "$HOME/.config/primenote/notes/$f.txt"'
 
 # sidebars
-bind = $mainMod SHIFT, W, exec, pypr toggle slack
-bind = $mainMod SHIFT, A, exec, pypr toggle todoist
-bind = $mainMod SHIFT, S, exec, pypr toggle terminal
-bind = $mainMod SHIFT, D, exec, pypr toggle messages
+bind = $mainMod SHIFT, W, exec, pypr toggle slack && waybar-visibility
+bind = $mainMod SHIFT, A, exec, pypr toggle todoist && waybar-visibility
+bind = $mainMod SHIFT, S, exec, pypr toggle terminal && waybar-visibility
+bind = $mainMod SHIFT, D, exec, pypr toggle messages && waybar-visibility
 
 # hyprexpo/HyCov Keybinds
 bind = $mainMod, tab, hyprexpo:expo, toggle
