--- a/user/files/pyprland.toml
+++ b/user/files/pyprland.toml
@@ -6,8 +6,8 @@ command = "google-chrome-stable --profile-directory=Default --app=https://todois
 class = "chrome-todoist.com__-Default"
 animation = "fromLeft"
 process_tracking = false
-size = "480px 1160px"
-position = "0px 38px"
+size = "480px 100%"
+position = "0px 0px"
 offset = "200%"
 multi = false
 smart_focus = false
@@ -18,8 +18,8 @@ command = "google-chrome-stable --profile-directory=Default --app=https://chat.b
 class = "chrome-chat.beeper.com__-Default"
 animation = "fromRight"
 process_tracking = false
-size = "850px 1160px"
-position = "1070px 38px"
+size = "850px 100%"
+margin = "0px"
 offset = "200%"
 multi = false
 smart_focus = false
