Switch from hyprchroma to new shader branch of hypr-darkwindow (WIP)

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -10,8 +10,7 @@ exec-once = hyprpm reload; hyprctl seterror enable
 exec-once = systemctl --user start hyprland.target &
 exec-once = lidhandler
 
-windowrulev2 = plugin:chromakey, fullscreen:0
-chromakey_background = $backgroundRgb
+windowrulev2 = plugin:shadewindow chromakey bkg=$backgroundRgb,fullscreen:0
 
 # prevent wallpaper animation glitch
 animation = layers, 0
@@ -189,7 +188,7 @@ bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, O, togglechromakey
+bind = $mainMod, O, shadeactivewindow, chromakey
 bind = $mainMod, N, exec, pnote -c new
 bind = $mainMod SHIFT, N, exec, bash -c 'f="$(hyprctl activewindow -j | jq -r .title)"; rm "$HOME/.config/primenote/notes/$f.txt"'
 
