--- a/user/files/theme/colors-hyprland.conf
+++ b/user/files/theme/colors-hyprland.conf
@@ -1,6 +1,6 @@
 $foreground = rgb({foreground.strip})
 $background = rgb({background.strip})
-$backgroundRgb = {background.rgb}
+$backgroundRgb = [{background.red} {background.green} {background.blue}]
 $backgroundAlpha = rgba({background.strip}db)
 $wallpaper = {wallpaper}
 
@@ -8,7 +8,7 @@ $color0 = rgb({color0.strip})
 $color1 = rgb({color1.strip})
 $color1Alpha = rgba({color1.strip}db)
 $color2 = rgb({color2.strip})
-$color2Alpha = rgba({color1.strip}db)
+$color2Alpha = rgba({color2.strip}db)
 $color3 = rgb({color3.strip})
 $color4 = rgb({color4.strip})
 $color5 = rgb({color5.strip})
@@ -22,4 +22,3 @@ $color12 = rgb({color12.strip})
 $color13 = rgb({color13.strip})
 $color14 = rgb({color14.strip})
 $color15 = rgb({color15.strip})
-
