Switch from wdisplays to nwg-displays

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -266,7 +266,7 @@ bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 bind = $mainMod, P, exec, agsv1 -r "switchDisplay()"
-bind = $mainMod SHIFT, P, exec, wdisplays
+bind = $mainMod SHIFT, P, exec, nwg-displays
 bind = SHIFT, XF86AudioRaiseVolume, exec, playerctl --player=spotify,%any,kdeconnect next
 bind = SHIFT, XF86AudioLowerVolume, exec, playerctl --player=spotify,%any,kdeconnect previous
 bind = , XF86AudioPlay, exec, playerctl --player=spotify,%any,kdeconnect play-pause
