Misc hyprland changes

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -110,6 +110,7 @@ decoration {
         passes = 5
         noise = 0.07
         xray = true
+        popups = true
     }
     drop_shadow = yes
     shadow {
