Race condition fix for chromakey

--- a/user/files/theme/colors-hyprland.conf
+++ b/user/files/theme/colors-hyprland.conf
@@ -1,8 +1,9 @@
 $foreground = rgb({foreground.strip})
 $background = rgb({background.strip})
-$backgroundRgb = [{background.red} {background.green} {background.blue}]
 $backgroundAlpha = rgba({background.strip}db)
 $wallpaper = {wallpaper}
+
+windowrulev2 = plugin:shadewindow chromakey bkg=[{background.red} {background.green} {background.blue}],fullscreen:0
 
 $color0 = rgb({color0.strip})
 $color1 = rgb({color1.strip})
