Swaync latest version compatibility

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -18,14 +18,15 @@ layerrule = blur,display-switcher
 layerrule = blur,power-menu
 layerrule = blur,swaync-control-center
 layerrule = blur,swaync-notification-window
+layerrule = noanim,swaync-control-center
 
 # layer shadows
 monitor=,addreserved,-6,0,0,0
 layerrule = ignorealpha 0.84,waybar
 layerrule = ignorealpha 0.84,display-switcher
 layerrule = ignorealpha 0.84,power-menu
-layerrule = ignorealpha 0.84,swaync-control-center
-layerrule = ignorealpha 0.84,swaync-notification-window
+layerrule = ignorealpha 0.83,swaync-control-center
+layerrule = ignorealpha 0.83,swaync-notification-window
 
 windowrulev2 = opacity 0.999, class:.*
 windowrulev2 = forcergbx, title:Picture-in-Picture
