--- a/user/files/theme/swaync/config.json
+++ b/user/files/theme/swaync/config.json
@@ -1,33 +1,15 @@
 {
-  "control-center-margin-right": 8,
-  "control-center-margin-bottom": 8,
+  "ignore-gtk-theme": false,
+  "layer-shell": true,
+  "control-center-margin-right": 20,
+  "control-center-margin-top": 14,
+  "control-center-margin-bottom": 20,
   "widgets": ["title", "dnd", "buttons-grid", "mpris", "notifications"],
   "timeout-critical": 15,
   "notification-visibility": {
     "wifi": {
       "state": "ignored",
       "app-name": "Network Management"
-    }
-  },
-  "widget-config": {
-    "buttons-grid": {
-      "actions": [
-        {
-          "label": "Settings",
-          "type": "normal",
-          "command": "zsh -c 'systemsettings & swaync-client -cp'"
-        },
-        {
-          "label": "App Store",
-          "type": "normal",
-          "command": "zsh -c 'pamac-manager & swaync-client -cp'"
-        },
-	      {
-          "label": "Displays",
-          "type": "normal",
-          "command": "zsh -c 'nwg-displays & swaync-client -cp'"
-        }
-      ]
     }
   }
 }
