--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -1,7 +1,7 @@
 source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/plasmoids.conf
+source = ~/.config/hypr/monitors.conf
 monitor=,preferred,auto,auto,vrr,1
-monitor=DP-6,5120x1440@119.97Hz,auto,auto,vrr,1
 
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,32
@@ -51,6 +51,7 @@ windowrulev2 = float, class:^$,title:^$
 windowrulev2 = float, class:org.kde.bluedevilwizard
 windowrulev2 = float, class:1Password
 windowrulev2 = float, class:pavucontrol-qt
+windowrulev2 = float, class:nwg-displays
 windowrulev2 = float, class:org.kde.polkit-kde-authentication-agent-1
 windowrulev2 = float, title:^(Open File)$
 windowrulev2 = float, title:^(Open Folder)$
