Simplify plasma widgets

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -37,6 +37,7 @@ windowrulev2 = size 600 420, class:^(primenote)$
 windowrulev2 = pin, class:^(primenote)$
 
 # Plasmoids
+windowrulev2 = noanim, class:org.kde.plasmawindowed
 windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmashell
@@ -194,10 +195,10 @@ bind = $mainMod, N, exec, pnote -c new
 bind = $mainMod SHIFT, N, exec, bash -c 'f="$(hyprctl activewindow -j | jq -r .title)"; rm "$HOME/.config/primenote/notes/$f.txt"'
 
 # sidebars
-bind = $mainMod SHIFT, W, exec, pypr toggle slack && waybar-visibility
-bind = $mainMod SHIFT, A, exec, pypr toggle todoist && waybar-visibility
-bind = $mainMod SHIFT, S, exec, pypr toggle terminal && waybar-visibility
-bind = $mainMod SHIFT, D, exec, pypr toggle messages && waybar-visibility
+bind = $mainMod SHIFT, W, exec, pypr toggle slack
+bind = $mainMod SHIFT, A, exec, pypr toggle todoist
+bind = $mainMod SHIFT, S, exec, pypr toggle terminal
+bind = $mainMod SHIFT, D, exec, pypr toggle messages
 
 # hyprexpo/HyCov Keybinds
 bind = $mainMod, tab, hyprexpo:expo, toggle
