--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -9,6 +9,7 @@ env = HYPRCURSOR_SIZE,32
 exec-once = hyprpm reload; hyprctl seterror enable
 exec-once = systemctl --user start hyprland.target &
 exec-once = lidhandler
+exec-once = [workspace special:ffpreload silent] /usr/lib/firefox/firefox about:blank
 
 # prevent wallpaper animation glitch
 animation = layers, 0
@@ -52,14 +53,23 @@ windowrulev2 = float, class:^$,title:^$
 windowrulev2 = float, class:org.kde.bluedevilwizard
 windowrulev2 = float, class:1Password
 windowrulev2 = float, class:pavucontrol-qt
+windowrulev2 = float, class:variety
 windowrulev2 = float, class:nwg-displays
 windowrulev2 = float, class:org.kde.polkit-kde-authentication-agent-1
+windowrulev2 = float, class:org.kde.gwenview
+windowrulev2 = float, class:^(org.freedesktop.impl.portal.*)$
 windowrulev2 = float, title:^(Open File)$
 windowrulev2 = float, title:^(Open Folder)$
 windowrulev2 = float, title:^(Save As)$
 windowrulev2 = float, title:^(Save File)$
 windowrulev2 = float, title:^(Copying — Dolphin)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
+
+# Variety Images
+windowrulev2 = noborder, title:^(Variety Images)$
+windowrulev2 = pin, title:^(Variety Images)$
+windowrulev2 = size 100% 120, title:^(Variety Images)$
+windowrulev2 = move 0 100%-120, title:^(Variety Images)$
 
 # Sidebars
 windowrulev2 = float, class:^(chrome-.*-Default)$
@@ -147,7 +157,7 @@ plugin:touch_gestures {
 }
 
 gestures {
-    workspace_swipe = true
+    gesture = 3, horizontal, workspace
     workspace_swipe_cancel_ratio = 0.15
 }
 
