Switch to plasma event calendar

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -41,7 +41,8 @@ windowrulev2 = noanim, class:org.kde.plasmawindowed
 windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmawindowed
 windowrulev2 = float, class:org.kde.plasmashell
-# windowrulev2 = noborder, class:org.kde.plasmawindowed
+windowrulev2 = move onscreen cursor, title:^(plasmawindowed)$
+windowrulev2 = nofocus, noblur, noanim, noborder, noshadow, title:^(plasmawindowed)$
 
 # Launcher
 # windowrulev2 = noborder, class:ulauncher
