Migrate to agsv2

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -266,7 +266,7 @@ bind = $mainMod, mouse_up, workspace, e-2
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = , XF86PowerOff, exec, agsv1 -t power-menu
+bind = , XF86PowerOff, exec, ags toggle power-menu
 bindl = ,switch:Lid Switch, exec, lidhandler
 
 # Function Keys
@@ -277,7 +277,7 @@ bind = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bind = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness lower
-bind = $mainMod, P, exec, agsv1 -r "switchDisplay()"
+bind = $mainMod, P, exec, ags request switchDisplay
 bind = $mainMod SHIFT, P, exec, nwg-displays
 bind = SHIFT, XF86AudioRaiseVolume, exec, playerctl --player=spotify,%any,kdeconnect next
 bind = SHIFT, XF86AudioLowerVolume, exec, playerctl --player=spotify,%any,kdeconnect previous
