Speedup firefox boot and switch sidebars to Firefox SSB

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -71,12 +71,10 @@ windowrulev2 = pin, title:^(Variety Images)$
 windowrulev2 = size 100% 120, title:^(Variety Images)$
 windowrulev2 = move 0 100%-120, title:^(Variety Images)$
 
-# Sidebars
-windowrulev2 = float, class:^(chrome-.*-Default)$
-windowrulev2 = noborder, class:^(chrome-.*-Default)$
-# windowrulev2 = pin, class:^(chrome-.*-Default)$
-# windowrulev2 = stayfocused, class:^(chrome-.*-Default)$
-windowrulev2 = rounding 0, class:^(chrome-.*-Default)$
+# Sidebars (Firefox SSB)
+windowrulev2 = float, title:.*SIDEBAR_.*
+windowrulev2 = noborder, title:.*SIDEBAR_.*
+windowrulev2 = rounding 0, title:.*SIDEBAR_.*
 
 # Set programs that you use
 $terminal = wezterm
